--- a/source/package.json
+++ b/source/package.json
@@ -13,12 +13,12 @@
     "eslint": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern src test"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.73.0",
+    "@aws-cdk/assert": "^1.73.0",
     "@types/jest": "^25.2.1",
-    "@types/node": "10.17.5",
+    "@types/node": "^10.17.5",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
-    "aws-cdk": "1.73.0",
+    "aws-cdk": "^1.73.0",
     "eslint": "^7.13.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -29,14 +29,13 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.73.0",
+    "@aws-cdk/aws-apigateway": "^1.73.0",
     "@aws-cdk/aws-ec2": "^1.73.0",
     "@aws-cdk/aws-emr": "^1.73.0",
     "@aws-cdk/aws-iam": "^1.73.0",
-    "@aws-cdk/aws-lambda": "1.73.0",
+    "@aws-cdk/aws-lambda": "^1.73.0",
     "@aws-cdk/aws-s3": "^1.73.0",
-    "@aws-cdk/core": "1.73.0",
-    "@aws-solutions-constructs/core": "1.73.0",
+    "@aws-cdk/core": "^1.73.0",
     "source-map-support": "^0.5.16"
   }
 }
