--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: ./deployment/build-s3-dist.sh dist-bucket amazon-emr-with-juicefs latest
+      - name: Build Benchmark
+        run: make -C ./source/benchmark-sample/tpcds-gen
 
