--- a/source/package.json
+++ b/source/package.json
@@ -29,13 +29,10 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.73.0",
     "@aws-cdk/aws-ec2": "^1.73.0",
     "@aws-cdk/aws-emr": "^1.73.0",
     "@aws-cdk/aws-iam": "^1.73.0",
-    "@aws-cdk/aws-lambda": "^1.73.0",
     "@aws-cdk/aws-s3": "^1.73.0",
-    "@aws-cdk/core": "^1.73.0",
-    "source-map-support": "^0.5.16"
+    "@aws-cdk/core": "^1.73.0"
   }
 }
